fix for layout utilities remove margins

--- a/styleguide/section-3.html
+++ b/styleguide/section-3.html
@@ -678,7 +678,7 @@
      <source src="../content/audio/BlueDucks_FourFlossFiveSix.ogg">
      <source src="../content/audio/BlueDucks_FourFlossFiveSix.wav">
    </audio>    
- <a class="btn btn--small btn--icon push--ends" title="Right click and choose Save link as..." href="#">
+ <a class="btn btn--primary btn--small btn--icon push--ends" title="Right click and choose Save link as..." href="#">
    <i class="icon icon-download"></i> 
    Download Audio File
  </a> 
@@ -702,7 +702,7 @@
      &lt;source src=&quot;../content/audio/BlueDucks_FourFlossFiveSix.ogg&quot;&gt;
      &lt;source src=&quot;../content/audio/BlueDucks_FourFlossFiveSix.wav&quot;&gt;
    &lt;/audio&gt;    
- &lt;a class=&quot;btn btn--small btn--icon push--ends&quot; title=&quot;Right click and choose Save link as...&quot; href=&quot;#&quot;&gt;
+ &lt;a class=&quot;btn btn--primary btn--small btn--icon push--ends&quot; title=&quot;Right click and choose Save link as...&quot; href=&quot;#&quot;&gt;
    &lt;i class=&quot;icon icon-download&quot;&gt;&lt;/i&gt; 
    Download Audio File
  &lt;/a&gt; 
