--- a/styleguide/section-5.html
+++ b/styleguide/section-5.html
@@ -793,7 +793,7 @@
 
 
 </p>
-<p><div class="row text--center dark-blue items-container">
+<p><div class="row text--center dark-blue push--bottom items-container">
  <div class="col small_6 medium_4 xlarge_2 item">
    <div class="circle--large primary-font-bold white bg-dark-blue circle circle--large col--centered">Dark blue</div>
    <div class="gamma">
