removed s from basic email template

--- a/styleguide/email-templates/email-basic-preview.htm
+++ b/styleguide/email-templates/email-basic-preview.htm
@@ -729,7 +729,7 @@ table[class="body"] .left-text-pad {
 <title>Standard Life</title>
 </head>
 
-<body>s
+<body>
 <table class="body">
   <tr>
     <td class="center" align="center" valign="top"><center>
