navigation pattern introduction text

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -654,7 +654,7 @@
                                 <h1>Standard Life Patterns (Beta)</h1>
 <div class="editor-content">
 
-    <p>Here you can download all of the <abbr title="Global Experience Language">GEL</abbr> boilerplate assets including sass, css, javascript, images and webfonts. An example index.html file with the correct asset references is also included</p>
+    <p>Here you can download all of the <abbr title="Global Experience Language">GEL</abbr> boilerplate assets including <abbr title="Syntactically Awesome Stylesheets">Sass</abbr>, <abbr title="Cascading Style Sheets">CSS</abbr>, Javascript, images and webfonts. An example index.html file with the correct asset references is also included</p>
 
     <a href="https://github.com/SLDG/gel/releases/download/v0.1.0/0.1.0.zip" class="btn btn--primary btn--icon no-external">
 
@@ -670,7 +670,7 @@
 
     </h2>
 
-    <p>The styleguide is constructed using <a href="http://warpspire.com/kss/"><abbr title="Knyle Style Sheets">KSS</abbr></a> documentation within the <abbr title="Syntactically Awesome Style Sheets">Sass</abbr> files. To rebuild the styleguide after making updates, you will need to install  <a href="http://howtonode.org/introduction-to-npm"><abbr title="Node Package Manager">npm</abbr></a> and <a href="https://github.com/hughsk/kss-node#installation">kss-node</a>.
+    <p>The styleguide is constructed using <a href="http://warpspire.com/kss/"><abbr title="Knyle Style Sheets">KSS</abbr></a> documentation within the <abbr title="Syntactically Awesome Stylesheets">Sass</abbr> files. To rebuild the styleguide after making updates, you will need to install  <a href="http://howtonode.org/introduction-to-npm"><abbr title="Node Package Manager">npm</abbr></a> and <a href="https://github.com/hughsk/kss-node#installation">kss-node</a>.
 
     <p>To rebuild the styleguide, run these commands:</p>
 
@@ -693,7 +693,7 @@
 
     <pre>git tag v0.1.9</pre>
 
-    <p>Create a zip file of the content folder with an index.html including references for css, javascript and any other assets required.</p>
+    <p>Create a zip file of the content folder with an index.html including references for <abbr title="Cascading Style Sheets">CSS</abbr>, Javascript and any other assets required.</p>
 
     <p>Then <a href="https://github.com/SLDG/gel/releases/new">create a release </a> for the tag version and upload the zip file.</p>
 
@@ -708,15 +708,15 @@
 
     <h3>CSS and Sass</h3>
 
-    <p>The site&apos;s CSS is compiled and minified using <a href="http://sass-lang.com/">Sass </a>. Two files are compiled from many: all.css and all-old-ie.css. All.css is served to all modern browsers and uses a responsive grid and media queries.All-old-ie.css is served only to IE8 (and below although IE versions before 8 are not officially supported) and uses a fixed width grid with no media queries.The Sass code is split between many files so it easy to find the code you need.</p>
+    <p>The site&apos;s <abbr title="Cascading Style Sheets">CSS</abbr> is compiled and minified using <a href="http://sass-lang.com/">Sass </a>. Two files are compiled from many: all.css and all-old-ie.css. All.css is served to all modern browsers and uses a responsive grid and media queries.All-old-ie.css is served only to IE8 (and below although IE versions before 8 are not officially supported) and uses a fixed width grid with no media queries. The <abbr title="Syntactically Awesome Stylesheets">Sass</abbr> code is split between many files so it easy to find the code you need.</p>
 
-    <p>The CSS is built in a modular way and covers a huge variety of design patterns, so adding CSS will be needed often. If you are adding new CSS for a new section of the site, create a new partial Sass file (preceded by an underscore, .scss filetype) and add it to the sass directory. Then open all.scss and add a new import with the name of your file. Add it at the end of the file.</p>
+    <p>The <abbr title="Cascading Style Sheets">CSS</abbr> is built in a modular way and covers a huge variety of design patterns, so adding <abbr title="Cascading Style Sheets">CSS</abbr> will be needed often. If you are adding new <abbr title="Cascading Style Sheets">CSS</abbr> for a new section of the site, create a new partial <abbr title="Syntactically Awesome Stylesheets">Sass</abbr> file (preceded by an underscore, .scss filetype) and add it to the sass directory. Then open all.scss and add a new import with the name of your file. Add it at the end of the file.</p>
 
     <p><a href="http://sass-lang.com/">Learn more about installing and compiling Sass</a></p>
 
     <h3>Mixins</h3>
 
-    <p>The Sass code contains several mixins and variables to make development easier, quicker and more consistent. Look in sass/mixins.css for the full list.</p>
+    <p>The <abbr title="Syntactically Awesome Stylesheets">Sass</abbr> code contains several mixins and variables to make development easier, quicker and more consistent. Look in sass/mixins.css for the full list.</p>
 
     <h4>Examples</h4>
 
