typo in image ratios

--- a/styleguide/section-9.html
+++ b/styleguide/section-9.html
@@ -1094,7 +1094,7 @@ Add the class <code>.pull--left</code> or <code>.pull--right</code> to the <code
                                 
                                 <div class="kss-description">
                                 
-                                  <p>Care should be taken when choosing image ratios. Images too tall or to thin will potentially have legibility and layout issues on samller screens. The use of a consistent 5:3 ratio for all article level content and related thumbnails is recommended. This ratio will scale gracefully across a wide variety of screen sizes and devices. The example layout below illustrates the use of a consistent 5:3 image ratio.
+                                  <p>Care should be taken when choosing image ratios. Images too tall or to thin will potentially have legibility and layout issues on smaller screens. The use of a consistent 5:3 ratio for all article level content and related thumbnails is recommended. This ratio will scale gracefully across a wide variety of screen sizes and devices. The example layout below illustrates the use of a consistent 5:3 image ratio.
 
 
 </p>
