ARIA abbr added to tabs

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -647,7 +647,7 @@
                               
                               <section id="section-0" class="kss-section kss-overview">
                               
-                                <h1>Standard Life Patterns (Beta)</h1>
+                                <h1>Standard Life Patterns</h1>
 <div class="editor-content">
 
     <p>Here you can download all of the <abbr title="Global Experience Language">GEL</abbr> boilerplate assets including <abbr title="Syntactically Awesome Stylesheets">Sass</abbr>, <abbr title="Cascading Style Sheets">CSS</abbr>, Javascript, images and webfonts. An example index.html file with the correct asset references is also included</p>
