navigation copy and links

--- a/styleguide/section-12.html
+++ b/styleguide/section-12.html
@@ -833,6 +833,7 @@
     </li>
 </ul>
 
+<p>Below are some simple examples using <abbr title="Object Orientated CSS">OOCSS</abbr> and <abbr title="Block, Element, Modifier">BEM</abbr> methodologies to use as a potential reference or starting point when beginning to prototype navigation patterns </p>
                                   
                                 </div>
                                 
