--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -628,9 +628,9 @@
 
     <p>Here you can download all of the <abbr title="Global Experience Language">GEL</abbr> boilerplate assets including <abbr title="Syntactically Awesome Stylesheets">Sass</abbr>, <abbr title="Cascading Style Sheets">CSS</abbr>, Javascript, images and webfonts. An example index.html file with the correct asset references is also included</p>
 
-    <a href="https://github.com/SLDG/gel/releases/download/v0.2.0/0.2.0.zip" class="btn btn--primary btn--icon no-external">
+    <a href="https://github.com/SLDG/gel/archive/0.2.2.zip" class="btn btn--primary btn--icon no-external">
 
-        Download Version 0.2.0 
+        Download Version 0.2.2 
 
         <i class="icon icon-download"></i>
 
@@ -648,7 +648,7 @@
 
     <pre>cd PATH_TO_PATTERNS_DIRECTORY</pre>
 
-    <pre>kss-node content/sass --template styleguide-template/ --style content/css/all.css</pre>
+    <pre>kss-node content/sass --template styleguide-template/ --css content/css/all.css</pre>
 
     <p>The updated styleguide can then be viewed by opening <code>styleguide/index.html</code> in a browser.</p>
 
